data/all_generated_tests/raw_wast_tests/nop_StackCorruption_141.wast
;; 2. **Test Description**:     Insert a `nop` within a loop that also manipulates the operand stack by pushing and popping values. Evaluate if the stack maintains the correct values before and after the loop execution.    **Constraint Checked**: Validates `nop` doesn't interfere with stack operations within iterative control structures.    **Relation to Stack Corruption**: Poor stack management could cause the loop to operate on corrupted data.

(assert_invalid
  (module
    (func (loop
      (nop)
      (i32.const 1) ;; push value onto the stack
      (br 0))) ;; branch back to the loop start
  )
  "type mismatch"
)